# resumaze

./: README.md
backend/resume/: .env  README.md  alembic.ini  pyproject.toml
backend/resume/alembic/: env.py
backend/resume/alembic/versions/: 0786398e6b71_remove_resume_id_from_profession_table.py  1cfd5659a8bb_added_ids_in_resume_table.py  1f18711df94c_change_enum_user_to_employee.py  22df9de6b5eb_change_resume_table_again.py  3f34b2c61cd0_added_resume_id_in_professionalinfo.py  4620939a3532_create_table_for_resume.py  5e0f125544df_add_session_and_remove_token.py  73aeaf4025f3_add_type_in_resume.py  74d8f4d6affe_change_education_table_to_make_resume.py  782d9791626b_change_education_table_id.py  847858ef886b_change_resume_table.py  a4143612965b_added_cover_letter_table.py  aa518620ae5e_change_enum_in_user_added_employee.py  aa53babfff3f_added_steps_table_and_image_column.py  ad85d95b470c_added_steps_table_and_image_column_again.py  b2b2f69bd23a_create_job_application_table.py  bf810823f1dd_change_language_as_list.py  c209817b9984_change_language_and_social_media_table.py  c7cec41ac1e5_added_cover_letter_table.py  cf02f42884c5_change_enum_in_user_added_employee_enum.py  d544a05c3ce1_remove_ids_in_resume_table.py  dec1f070a883_add_type_in_resume.py  e08ea7d2578a_initial_migrations.py  f44ab1a8b628_add_col_in_language.py  fb447933089e_added_token_session_oauth_in_user_table.py  fc784a2313ce_add_title_in_job.py  fdb932f96608_create_table_for_now_resume.py  fea84ef7e605_change_enum_in_user_and_language.py
backend/resume/resume/: db.py  main.py  model.py  settings.py
(+122 files in other folders)
