[tool.poetry]
name = "resume"
version = "0.1.0"
description = ""
authors = ["Hira Aziz <hiraaziz1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
sqlmodel = "^0.0.21"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
psycopg = "^3.2.1"
alembic = "^1.13.2"
groq = "^0.9.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
